Repositioned countdown for larger formats to stop it overflowing off screen

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -12,8 +12,8 @@
   @media screen and (min-width: 768px){
     transform: rotate(-45deg);
     width: 350px;
-    top: 45px;
-    left: -92px;
+    top: 60px;
+    left: -82px;
   }
 }
 
